# nbformat

./: .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  appveyor.yml  index.js  package.json  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/scripts/: create_npmrc.py  parse_ref.py
.github/workflows/: release_publish.yml  tests.yml
ci/: postgres_jupyter_config.py
docs/: Makefile  api.rst  changelog.rst  conf.py  format_description.rst  index.rst  make.bat  markup.rst  requirements.txt
jupyter_nbformat/: __init__.py  current.py  sign.py  validator.py
jupyter_nbformat/tests/: test_api.py  test_sign.py  test_validator.py
jupyter_nbformat/v3/: convert.py
jupyter_nbformat/v4/: convert.py
jupyter_nbformat/v4/tests/: test_convert.py  test_nbbase.py  test_validate.py
nbformat/: __init__.py  _compat.py  _struct.py  _version.py  converter.py  current.py  json_compat.py  notebooknode.py  reader.py  sign.py  validator.py  warnings.py
nbformat/corpus/: adjectives.txt  nouns.txt  words.py
nbformat/corpus/tests/: test_words.py
nbformat/tests/: test3_no_metadata.ipynb  test3_worksheet_with_no_cells.ipynb  test4docinfo.ipynb  test4jupyter_metadata_timings.ipynb  test_api.py  test_convert.py  test_nbformat.py  test_reader.py  test_sign.py  test_validator.py
nbformat/v1/: convert.py  nbbase.py  nbjson.py  rwbase.py
nbformat/v2/: __init__.py  convert.py  nbbase.py  nbjson.py  nbpy.py  nbxml.py  rwbase.py
nbformat/v3/: __init__.py  convert.py  nbbase.py  nbjson.py  nbpy.py  rwbase.py
nbformat/v3/tests/: test_json.py  test_nbbase.py  test_nbpy.py
nbformat/v4/: __init__.py  convert.py  nbbase.py  nbformat.v4.0.schema.json  nbformat.v4.1.schema.json  nbformat.v4.3.schema.json  nbformat.v4.4.schema.json  nbformat.v4.5.schema.json  nbformat.v4.6.schema.json  nbformat.v4.schema.json  nbjson.py  rwbase.py
nbformat/v4/tests/: test_convert.py  test_json.py
scripts/: corpusgen.ipynb  jupyter-trust
tests/: base.py  invalid.ipynb  test3_no_worksheets.ipynb  test4.5.ipynb  test4.ipynb  test4custom.ipynb  test4docinfo.ipynb  test4jupyter_metadata.ipynb  test4jupyter_metadata_timings.ipynb  test4plus.ipynb  test_api.py  test_convert.py  test_nbformat.py  test_reader.py  test_sign.py  test_validator.py
tests/v1/: nbexamples.py  test_json.py  test_nbbase.py
tests/v2/: nbexamples.py  test_json.py  test_nbbase.py  test_nbpy.py
tests/v3/: formattest.py  nbexamples.py  test_json.py  test_misc.py  test_nbbase.py  test_nbpy.py
tests/v4/: formattest.py  nbexamples.py  test_convert.py  test_json.py  test_nbbase.py  test_validate.py
